# paraphrase

./: .gitignore  CMakeLists.txt
src/: app.py  main.cpp
